# agent-manager

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
agent_manager/: __init__.py  __main__.py
agent_manager/ai_controller/: controller.py
agent_manager/ai_controller/connectors/: base.py  claude.py
agent_manager/orchestrator/: app.py
agent_manager/orchestrator/static/css/: style.css
agent_manager/orchestrator/static/js/: main.js
agent_manager/orchestrator/templates/: base.html  index.html
agent_manager/session_manager/: container_manager.py
agent_manager/utils/: config.py  logger.py
deploy/: docker-compose.template.yml
docs/: README.md  architecture.md  installation.md
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_ai_controller.py  test_claude_connector.py  test_config.py  test_container_manager.py  test_logger.py
