[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-manager"
version = "0.1.0"
description = "Python-Based Multi-Session Chrome + AI Orchestrator"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "flask>=2.0.0",
    "docker>=5.0.0",
    "python-dotenv>=0.19.0",
    "requests>=2.25.0",
    "websocket-client>=1.2.0",
    "python-socketio>=5.4.0",
    "pydantic>=1.9.0"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/agent-manager"
"Bug Tracker" = "https://github.com/yourusername/agent-manager/issues"

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B"]
ignore = []

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"